--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
+    <link rel="icon" type="image/png" href="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playground</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Playground - Online Web Code Editor</title>
+    <meta name="title" content="Playground - Online Web Code Editor" />
+    <meta name="description" content="Build, test, and preview HTML, CSS, and JavaScript in real-time with Playground – your futuristic web coding playground with dark mode and sharing tools." />
+    <meta name="keywords" content="Playground, Web Editor, Code Playground, HTML CSS JS Editor, Online IDE, Live Preview, JavaScript Sandbox, Coding Tool" />
+    <meta name="author" content="Garv Balwani" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:title" content="Playground - Online Web Code Editor" />
+    <meta property="og:description" content="A futuristic playground to test and share your HTML, CSS, and JS code in real-time." />
+    <meta property="og:image" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
+    <meta property="twitter:url" content="https://yourdomain.com/" />
+    <meta property="twitter:title" content="Playground - Online Web Code Editor" />
+    <meta property="twitter:description" content="Test HTML, CSS, JS instantly. Share, preview, and launch your ideas faster." />
+    <meta property="twitter:image" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
+
+    <!-- Accessibility -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Manifest (optional for PWA) -->
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com/" />
   </head>
   <body>
     <div id="root"></div>
