--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:url" content="https://playground-bice.vercel.app/" />
     <meta property="og:title" content="Playground - Online Web Code Editor" />
     <meta property="og:description" content="A futuristic playground to test and share your HTML, CSS, and JS code in real-time." />
     <meta property="og:image" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
-    <meta property="twitter:url" content="https://yourdomain.com/" />
+    <meta property="twitter:url" content="https://playground-bice.vercel.app/" />
     <meta property="twitter:title" content="Playground - Online Web Code Editor" />
     <meta property="twitter:description" content="Test HTML, CSS, JS instantly. Share, preview, and launch your ideas faster." />
     <meta property="twitter:image" content="/ChatGPT Image May 27, 2025, 03_13_04 PM.png" />
@@ -35,7 +35,7 @@
     <!-- <link rel="manifest" href="/manifest.json" /> -->
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourdomain.com/" />
+    <link rel="canonical" href="https://playground-bice.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
